# osrs-dps-calc

./: Cargo.toml  README.md
data/: enemies.json  equipment.json  prayers.json  spells.json
src/: equipment.rs  generics.rs  lib.rs  main.rs  main_old.rs  prayers.rs  spells.rs  unit.rs  weapon_callbacks.rs
src/equipment/: combat_styles.rs  default_items.rs  mod.rs  weapon_callbacks.rs
tests/: integration_tests.rs
