[package]
name = "osrs-dps-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
derive_more = "0.99.17"
lazy_static = "1.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
